# Againpage

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
desktop/: BUILD.md  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs  vault.rs
desktop/src-tauri/src/sidecar/: mod.rs  ports.rs  postgres.rs  supervisor.rs
engine/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
engine/goldens/: README.md  amor_fati.json
engine/scripts/: build_engine.sh  reset_db.py  run_goldens.py
engine/src/againpage/: config.py  version.py
engine/src/againpage/api/: app.py  routes.py  schemas.py
engine/src/againpage/core/: models.py  scoring.py  selection.py
engine/src/againpage/generation/: generate.py  payload.py  prompts.py  schema.py  writer.py
engine/src/againpage/pipeline/: cluster.py  ingest.py  label.py  reindex.py
engine/src/againpage/providers/: base.py  factory.py  ollama.py  openrouter.py
engine/src/againpage/queue/: queue.py
engine/src/againpage/scheduler/: scheduler.py  sync.py
engine/src/againpage/storage/: db.py  migrate.py  repository.py  seed.py
engine/src/againpage/storage/migrations/: 0001_init.sql  0002_cadence_days.sql  0003_vault_paths.sql  0004_provider_keys.sql  0005_timezone.sql  0006_issue_curation.sql  0007_prompt_overrides.sql  0008_sync_state.sql
engine/src/againpage/sync/: sync.py
engine/src/againpage/vault/: frontmatter.py  links.py  scan.py  watcher.py
engine/src/againpage/worker/: loop.py
engine/tests/: conftest.py  test_boot.py  test_config.py  test_entrypoints.py
engine/tests/api/: test_issue_flags_api.py  test_issues.py  test_notes_expand.py  test_prompts_defaults.py  test_settings_api.py  test_status_reindex.py  test_sync_status.py  test_timezone_alias.py  test_version_fields.py
engine/tests/core/: test_models.py  test_note_models.py  test_scoring_cluster.py  test_selection.py  test_selection_models.py  test_selection_scoring.py  test_theme_models.py
engine/tests/generation/: test_build_payload.py  test_generate.py  test_goldens.py  test_payload.py  test_prompts.py  test_prompts_compose.py  test_schema.py  test_writer.py
engine/tests/pipeline/: test_cluster_diff.py  test_ingest.py  test_ingest_resilient.py  test_label.py  test_reduce_cluster.py  test_reindex.py  test_run_cluster.py
engine/tests/providers/: test_base.py  test_factory.py  test_ollama.py  test_openrouter.py  test_prompt_override.py
engine/tests/queue/: test_queue.py
engine/tests/scheduler/: test_scheduler.py  test_sync_clamp.py  test_sync_due.py
engine/tests/storage/: test_bootstrap.py  test_db.py  test_embed_dim.py  test_issue_flags.py  test_migrate.py  test_notes_repo.py  test_pool_row_factory.py  test_repository.py  test_seed.py  test_selection_repo.py  test_themes_repo.py
engine/tests/vault/: test_debouncer.py  test_frontmatter.py  test_links.py  test_scan.py  test_watcher.py
engine/tests/worker/: test_generate.py  test_ingest_chain.py  test_ingest_records_sync.py  test_retry_policy.py  test_scheduler_heartbeat.py
infra/: docker-compose.yaml
reader/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
reader/src/: App.test.tsx  (+6 more)
scripts/: clear-jobs.sh
(+90 files in other folders)
