[project]
name = "againpage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
againpage-api = "againpage.api.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx",
    "respx>=0.23.1",
]
