[project]
name = "againpage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "hdbscan>=0.8.44",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "ruamel-yaml>=0.19.1",
    "umap-learn>=0.5.12",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]

[tool.uv]
# pynndescent 0.5.13 (umap-learn's transitive dep) pins llvmlite==0.36.0,
# which has no wheels and fails to build on Python 3.14. Force the resolver
# to newer transitive versions with 3.14 wheels instead.
constraint-dependencies = [
    "pynndescent>=0.6.0",
    "numba>=0.60",
    "llvmlite>=0.43",
]

[project.scripts]
againpage-api = "againpage.api.app:main"
againpage-worker = "againpage.worker.loop:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx",
    "respx>=0.23.1",
]
