[package]
name = "againpage"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "againpage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Default build is the reader-only app (no bundled engine). Enable
# `bundled-engine` to build the all-in-one app that ships Postgres + the
# api/worker sidecars (requires the PyInstaller + Postgres bundle assets).
default = []
bundled-engine = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-dialog = "2"
walkdir = "2"

